updated delblurb and other things

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Things I Can Do</a></li>
-						<li><a href="#three">A Few Accomplishments</a></li>
+						<li><a href="#two">Hire Me</a></li>
+						<li><a href="#three">See My Work</a></li>
 						<li><a href="#four">Contact</a></li>
 					</ul>
 				</nav>
@@ -75,7 +75,8 @@
 										<h2>About Me</h2>
 										<p>"The things that make me different <br />are the things that make me." - Winnie the Pooh</p>
 									</header>
-									<p>You are capable. I’ve always been told this as a child from my Mother as she has always seen the things that I’m capable of even before I could foresee them. I was always capable, adaptable, and resilient in anything that I attempted to learn and master. I did it when I learned to play violin and when I had to conquer my anatomy class in college. I’ve always had a passion for technology and working with children, so I understand how technology plays a pivotal role in the lives of children. Technology was always utilized in my education to create the optimal learning solutions, I aspire to create innovative solutions that will positively impact children's lives through their learning. Through my previous roles I’ve had to collaborate and analyze data with colleagues and make creative solutions for the children’s learning environment.I am eager to learn and  take on new challenges that will help me grow both personally and professionally. I believe that my dedication to excellence and commitment to continuous learning will enable me to quickly become an asset to any team.</p>
+									<p>My passion for technology was sparked during my time as a Behavioral Health Technician, where I witnessed students struggling to engage due to various learning styles and attention issues. Through my previous roles, I honed my skills in collaborating with colleagues, analyzing data, and devising creative solutions to improve the children's learning environment. Now, I am eager to take on new challenges and create new educational technology and software applications that can help bridge the gap for students with different learning needs. With my dedication to excellence and commitment to continuous learning, I am confident that I will be a valuable asset to any engineering team. 
+									</p>
 								</div>
 							</section>
 
